[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "voting"
version = "0.1.2"
description = "Voting and election related functions."
authors = ["Christopher Flynn <crf204@gmail.com>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/crflynn/voting"
homepage = "https://github.com/crflynn/voting"
packages = [
    { include = "voting" }
]
include = ["HISTORY.rst"]
keywords = ["voting", "disproportionality", "apportionment", "diversity", "election"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

[tool.poetry.dev-dependencies]
sphinx = {version = "^2.1", python = "^3.7"}
sphinx-autobuild = {version = "^0.7.1", python = "^3.7"}
sphinx-rtd-theme = {version = "^0.4.3", python = "^3.7"}
pytest = "^4.6"
pytest-cov = "^2.7"
twine = "^1.13"
black = {version = "^18.3-alpha.0",allows-prereleases = true,python = "^3.7"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
